--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,10 @@
 <title>list prods in this service</title>
 </head>
 <body>
-	<a href="http://localhost:8080/restfulWebServiceCrudList/rest/products">liste prod presents dans ce service par méthode get</a>
+	<a href="http://localhost:8080/restfulWebServiceCrudList/rest/products">local hostliste prod presents dans ce service par méthode get</a>
+
+	<a href="https://webservicerestful2020.herokuapp.com/rest/products">heroku app liste prod presents dans ce service par méthode get</a>
+
 
 </body>
 </html>
