--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,24 @@
 <title>list prods in this service</title>
 </head>
 <body>
+	<h1>A Simple RESTful example</h1>
+<p>
+	This webapp is <b>a simple RESTful application example</b>.<br/>
+	It's hosted by Heroku and was designed with Java EE Technologies (Servlet, JPA, JAX-RS, JAX-B, ...).
+</p>
+<p>
+	The documentation of the REST API is available in the side bar to the right.
+</p>
+<p>
+	To consume web services, you can use <a href="http://curl.haxx.se/">cURL</a>, develop your own REST client, 
+	or use one available as plugin for your browser.
+	The best known are:
+	<ul>
+		<li><a href="https://chrome.google.com/webstore/detail/advanced-rest-client/hgmloofddffdnphfgcellkdfbfbjeloo">Simple REST Client</a> for Google Chrome</li>
+		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/restclient/">RESTClient</a> for Mozilla Firefox</li>
+	</ul>
+</p>
+	
 	<a href="http://localhost:8080/restfulWebServiceCrudList/rest/products">local host liste prod presents dans ce service par méthode get</a>
     <br>
 	<a href="https://webservicerestful2020.herokuapp.com/rest/products">heroku app liste prod presents dans ce service par méthode get</a>
